@@ -3,6 +3,7 @@ Process Hacker
 2.32
  * NEW/IMPROVED:
    * Updated for Windows 8.1
+   * Added progress display for thread stacks
  * FIXED:
    * Fixed handling of long symbol names
    * Fixed Run As preventing Windows 8 apps from starting
